# maxlog

./: CMakeLists.txt  README.md  maxlog.hpp  maxlog_sample.cpp
